<?xml version="1.0"?>
<package>
  <name>nus_boxslam</name>
  <version>0.0.0</version>
  <description>The nus_boxslam package</description>

  <maintainer email="pshinghal@gmail.com">Pallav Shinghal</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/nus_boxslam</url> -->

  <author email="pshinghal@gmail.com">Pallav Shinghal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>